Fixed verified badge v-align in dyslexic mode

--- a/static/css/dyslexic_mode.css
+++ b/static/css/dyslexic_mode.css
@@ -1,3 +1,8 @@
 * {
     font-family: "OpenDyslexic" !important;
 }
+
+.verified {
+    text-align: middle !important;
+    margin-bottom: .2em !important;
+}
